--- a/app/templates/search-result-db.html
+++ b/app/templates/search-result-db.html
@@ -1,15 +1,15 @@
 <div class="movie-grid">
-  {% for movie in search_result %}
-    {% if not movie is string %}
-    <a class="card movie" href="{{ url_for('movie_detail', movie_id=movie.movieid) }}">
+  {% for product in search_result %}
+    {% if not product is string %}
+    <a class="card movie" href="{{ url_for('product_detail', product_id=product.prod_id) }}">
       <div class="poster-placeholder">
       </div>
       <div class="content">
-        <h1>{{ movie.movietitle }}</h1>
+        <h1>{{ product.movietitle[:-6] }}</h1>
       </div>
     </a>
     {% else %}
-    {{ movie }}
+    {{ product }}
     {% endif %}
   {% endfor %}
 </div>
