--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -36,7 +36,7 @@
             <div>
               <h2>Datos de la cuenta</h1>
               <input class="first" type="email" name="email" placeholder="Correo electrónico" required/>
-              <input type="text" name="username" placeholder="Nombre de usuario" minlength="6" maxlength="20" required/>
+              <input type="text" name="username" placeholder="Nombre de usuario" minlength="3" maxlength="20" required/>
               <div class="row">
                 <input id="password" type="password" name="password" placeholder="Contraseña" minlength="6" maxlength="20" required/>
                 <input type="password" name="passwordCheck" placeholder="Repetir contraseña" maxlength="20" required/>
@@ -51,8 +51,8 @@
               <div class="row one-three">
                 <select name="gender" required>
                   <option value="" selected disabled hidden>Género</option>
-                  <option value="male">Hombre</option>
-                  <option value="female">Mujer</option>
+                  <option value="M">Hombre</option>
+                  <option value="F">Mujer</option>
                 </select> 
                 <input type="text" name="direction" placeholder="Dirección" minlength="6" maxlength="40" required/>
               </div>
