--- a/app/templates/list_movies.html
+++ b/app/templates/list_movies.html
@@ -8,7 +8,7 @@
     {% if not movies_1949 is string %}
       <ul>
       {% for item in movies_1949 %}
-      <li>{{ item.movietitle }}</li>
+      <li>{{ item.title }}</li>
       {% endfor %}
       <ul>
     {% else %}
