Shopping history funcionando

--- a/app/templates/shopping-history.html
+++ b/app/templates/shopping-history.html
@@ -54,7 +54,7 @@
               <div class="content">
                 <div class="row shopping-item">
                   <div class="dot"></div>
-                  <h1>{{ movie.movie_title }}</h1>
+                  <h1>{{ movie.title }}</h1>
                   <h1>{{ movie.date }}</h1>
                   <h1 class="price">{{ movie.price }}€</h1>
                 </div>
