--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,16 +36,9 @@
                 <input type="text" id="q" placeholder="Búsqueda..."/>
                 <select id="genre" onchange="search()">
                   <option value="" selected disabled hidden>Categoría</option>
-                  <option value="">Cualquiera</option>
-                  <option value="action">Acción</option>
-                  <option value="animation">Animación</option>
-                  <option value="adventure">Aventura</option>
-                  <option value="comedy">Comedia</option>
-                  <option value="drama">Drama</option>
-                  <option value="musical">Musical</option>
-                  <option value="science-fiction">Ciencia ficción</option>
-                  <option value="horror">Horror</option>
-                  <option value="thriller">Thriller</option>
+                  {% for genre in genres %}
+                    <option value="{{ genre.name }}">{{ genre.name }}</option>
+                  {% endfor %}
                 </select> 
               </div>
             </div>
