--- a/app/templates/search-result-db.html
+++ b/app/templates/search-result-db.html
@@ -5,7 +5,7 @@
       <div class="poster-placeholder">
       </div>
       <div class="content">
-        <h1>{{ product.title[:-6] }}</h1>
+        <h1>{{ product.title[:-6] }} ({{ product.description }})</h1>
       </div>
     </a>
     {% else %}
