Géneros aparecen en product-detail

--- a/app/templates/product-detail.html
+++ b/app/templates/product-detail.html
@@ -21,12 +21,8 @@
           <div class="data">{{ product.title[:-6] }}</div>
           <div class="type">Año</div>
           <div class="data">{{ product.year }}</div>
-          <div class="type">Dirección</div>
-          <div class="data">{{ product.director }}</div>
-          <div class="type">Duración</div>
-          <div class="data">{{ product.duration }} min.</div>
           <div class="type">Géneros</div>
-          <div class="data">{{ product.genres_string }}</div>
+          <div class="data">{{ product.genres }}</div>
         </div>
       </div>
     </div>
